--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ p {
     background-image: url(./images.png);
     background-size: 100%;
     background-position: cover;
+    /* background-repeat: no-repeat; */
     padding: 10px;
 
     &.ad2 {
@@ -43,15 +44,6 @@ a{
     text-decoration: none;
     text-align: center;
     & h4 {
-        background-color: #0000007a;
         text-align: center;
-        padding: 20px;
-
-    }
-}
-
-@media only screen and (max-width:800px) {
-    h4 {
-        font-size: 25px;
     }
 }
