--- a/style.css
+++ b/style.css
@@ -47,3 +47,9 @@ a{
         text-align: center;
     }
 }
+
+@media only screen and (max-width:800px) {
+    h4 {
+        font-size: 25px;
+    }
+}
